--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,11 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.1.3</version>
+		</dependency>
 
 		<!-- Test -->
 		<dependency>
@@ -171,14 +176,32 @@
 					<showWarnings>true</showWarnings>
 				</configuration>
 			</plugin>
-			 <plugin>
-				 <groupId>org.apache.maven.plugins</groupId>
-				 <artifactId>maven-war-plugin</artifactId>
-				 <version>2.1.1</version>
-				 <configuration>
-					 <failOnMissingWebXml>false</failOnMissingWebXml>
-				 </configuration>
-			 </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<filters>
+						<filter>src/main/resources/app.properties</filter>
+					</filters>
+					<webResources>
+						<resource>
+							<filtering>true</filtering>
+							<directory>src/main/webapp</directory>
+							<includes>
+								<include>**/*.js</include>
+							</includes>
+						</resource>
+						<resource>
+							<filtering>false</filtering>
+							<directory>src/main/webapp</directory>
+							<excludes>
+								<exclude>**/*.js</exclude>
+							</excludes>
+						</resource>
+					</webResources>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
