Migrated ReCaptcha verification process to Spring Integration

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 	<dependencies>
 		<!-- Spring -->
 		<dependency>
+			<groupId>org.springframework.integration</groupId>
+			<artifactId>spring-integration-http</artifactId>
+			<version>2.1.1.RELEASE</version>
+		</dependency>
+		<dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
 			<version>2.2.2</version>
